cabal-version:      3.0
name:               typedredex-freedeep
version:            0.1.0.0
synopsis:           Pure AST TypedRedex with multiple interpreters
license:            MIT
author:             Xu Xue
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
        TypedRedex.DSL
        TypedRedex.Core.Term
        TypedRedex.Core.IxFree
        TypedRedex.Core.Schedule
        TypedRedex.Core.RuleF
        TypedRedex.Pretty
        TypedRedex.Interp.Typeset
        TypedRedex.Interp.Trace
        TypedRedex.Backend.Goal
        TypedRedex.Backend.Engine
        TypedRedex.Backend.Eval
        TypedRedex.Backend.Query
        TypedRedex.Nominal
        TypedRedex.Nominal.Bind
        TypedRedex.Nominal.Prelude
    build-depends:
        base >= 4.17 && < 5,
        containers,
        mtl
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        LambdaCase
        TypeOperators
        RankNTypes
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        MultiParamTypeClasses
        UndecidableInstances
        ConstraintKinds
        PolyKinds
        StandaloneKindSignatures
        AllowAmbiguousTypes

executable example-simple
    import:           warnings
    main-is:          Simple/Main.hs
    other-modules:
        Simple.Syntax
        Simple.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Simple.Main

executable example-stlc
    import:           warnings
    main-is:          Stlc/Main.hs
    other-modules:
        Stlc.Syntax
        Stlc.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Stlc.Main

executable example-stlc-plus
    import:           warnings
    main-is:          StlcPlus/Main.hs
    other-modules:
        StlcPlus.Syntax
        StlcPlus.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is StlcPlus.Main

executable example-pcf
    import:           warnings
    main-is:          Pcf/Main.hs
    other-modules:
        Pcf.Syntax
        Pcf.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Pcf.Main

executable example-poly
    import:           warnings
    main-is:          Poly/Main.hs
    other-modules:
        Poly.Syntax
        Poly.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is Poly.Main

executable example-mode-errors
    import:           warnings
    main-is:          ModeErrors/Main.hs
    other-modules:
        ModeErrors.Syntax
        ModeErrors.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is ModeErrors.Main

executable example-trace-partial
    import:           warnings
    main-is:          TracePartial/Main.hs
    other-modules:
        TracePartial.Syntax
        TracePartial.Rules
        Stlc.Syntax
        Stlc.Rules
        StlcPlus.Syntax
        StlcPlus.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is TracePartial.Main

executable example-systemf-nominal
    import:           warnings
    main-is:          SystemFNominal/Main.hs
    other-modules:
        SystemFNominal.Syntax
        SystemFNominal.Rules
        Support.Nat
    build-depends:
        base >= 4.17 && < 5,
        typedredex-freedeep
    hs-source-dirs:   examples/projects, examples
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeFamilies
        GADTs
        TypeOperators
    ghc-options:      -main-is SystemFNominal.Main
