cabal-version: 3.0
name:          typedredex-hkt
version:       0.1.0.0
synopsis:      HKD-based TypedRedex core (demo)
license:       BSD-3-Clause

library
  exposed-modules:
    HKT.Core
    HKT.Moded
    HKT.Example.Syntax
    HKT.Example.Rules
  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    DataKinds
    TypeFamilies
    GADTs
    LambdaCase
    OverloadedStrings
  ghc-options: -Wall
  build-depends:
    base >= 4.16 && < 5,
    containers >= 0.6
